--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Your+Chosen+Font&display=swap" rel="stylesheet">
-    <title>下雪背景效果和生日祝福</title>
+    <title>高赫研生日快乐</title>
     <style>
         body {
             overflow: hidden;
